<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".content.tasks.TaskEditFragment">

    <TextView
        android:text="@string/mark_as"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_in_urgent_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_urgent_tasks"/>
        <RadioButton
            android:id="@+id/rb_long_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_long_tasks"/>
        <RadioButton
            android:id="@+id/rb_completed_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_completed_tasks"/>
    </RadioGroup>

    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/et_task"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/task_description"
        android:importantForAutofill="no" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

</LinearLayout>